Descripción de los cambios realizados

--- a/Portafolio_u1/Audio.html
+++ b/Portafolio_u1/Audio.html
@@ -70,7 +70,23 @@
             />
           </td>
         </tr>
+
       </tbody>
+      <div class="container">
+        <h2>5. Aplicación Embebida: YouTube</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qF0PdgefNMY?si=AMbYoPPfQ4DRo4mK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <div class="container">
+        <h2>6. Aplicación Embebida: Spotify</h2>
+        <iframe src="https://open.spotify.com/embed/track/ID_DEL_TRACK" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+
+    <div class="container">
+        <h2>7. Aplicación Embebida: Google Maps</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345091855!2d144.9537353153189!3d-37.81720997975133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11b17d%3A0x5045675218ceed8!2sFederation%20Square!5e0!3m2!1ses!2sau!4v1615555466631!5m2!1ses!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+
     </table>
     
   </body>
