--- a/Portafolio_u1/Horario.html
+++ b/Portafolio_u1/Horario.html
@@ -4,17 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Horario de clases</title>
+
+    <style>
+        body {
+          font-family: Arial, sans-serif;
+          background-color: #fff1fe;
+          
+
+        }
+  
+        h1 {
+          color: #002851;
+        }
+  
+        p {
+          font-size: 16px;
+        }
+      </style>
   </head>
   <body>
     <h1>Mi horario de clases</h1>
-    <table border="1">
+    <table border="1" style="background-color: rgb(248, 225, 243);">
       <tr>
-        <th>Hora</th>
-        <th>Lunes</th>
-        <th>Martes</th>
-        <th>Miércoles</th>
-        <th>Jueves</th>
-        <th>Viernes</th>
+        <th style="color: blueviolet;">Hora</th>
+        <th style="color: blueviolet;">Lunes</th>
+        <th style="color: blueviolet;">Martes</th>
+        <th style="color: blueviolet;">Miércoles</th>
+        <th style="color: blueviolet;">Jueves</th>
+        <th style="color: blueviolet;">Viernes</th>
       </tr>
       <tr>
         <td>09:00 - 10:00</td>
@@ -50,7 +67,7 @@
       </tr>
       <tr>
         <td>15:00 - 16:00</td>
-        <td>Fundamentos de Telecomunicaciones</td>
+        <td></td>
         <td>Fundamentos de Ingeniería de Software</td>
         <td></td>
         <td>Administración de Base de Datos</td>
@@ -58,7 +75,7 @@
       </tr>
       <tr>
         <td>15:00 - 17:00</td>
-        <td></td>
+        <td>Fundamentos de Telecomunicaciones</td>
         <td></td>
         <td>Administración de Base de Datos</td>
         <td>Fundamentos de Ingeniería de Software</td>
